@@ -39,8 +39,8 @@ import java.util.AbstractList;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import javax.servlet.ServletException;
 import jenkins.model.Jenkins;
@@ -112,7 +112,7 @@ public class ParametersDefinitionProperty extends OptionalJobProperty<Job<?, ?>>
     @NonNull
     @Override
     public Collection<Action> getJobActions(Job<?, ?> job) {
-        return Collections.singleton(this);
+        return Set.of(this);
     }
 
     @Deprecated
